--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 <script defer src="main.js"></script></head>
 <body>
     <header>
-        <nav><button>Home</button>
-        <button>Menu</button>
-        <button>About</button>
+        <nav><button id="home">Home</button>
+        <button id="menu">Menu</button>
+        <button id="about">About</button>
     </nav>
     </header>
     <div id="content">
         
+        
     </div>
+    <footer>Pizza icon made by Freepik - www.flaticon.com</footer>
 </body>
 </html>
